--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,6 @@
         "aws/aws-sdk-php": "^3.225",
         "stripe/stripe-php": "^8.7",
         "pusher/pusher-php-server": "^7.0"
-    }
+    },
+    "config": { "platform-check": false }
 }
